[tool.poetry]
name = "shortlink"
version = "0.1.0"
description = "URL shortener."
authors = ["Muneeb Khawaja <muneebtahirkhawaja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
SQLAlchemy = "^1.4.29"
psycopg2 = "^2.9.3"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-mock = "^3.7.0"
requests = "^2.27.1"
pylint = "^2.12.2"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
